== github

* enhancement
  * Using static twitter bootstrap files
  * UI : button back & submit on the same line

* bugfix
  * Fix #18 : Responsive Theme Navbar Overlaps Content When Resizing Below ~979px
  * Fix generator locales
  * Fix icon datetimepicker

== 1.0.1

* enhancement
  * Change datetimepicker (eyecon.ro -> eonasdan)
  * Support CamelCase syntaxe for models.

* bugfix
  * Change keys symbol into string on session (begin at 0.3.5)

== 1.0.0.pre

* enhancement
  * Remove Markitup
  * Remove Livequery
  * Compatibility Rails 5
  * Update gem (prawn, ransack, willpaginate)

== 0.3.6

* enhancement
  * Prevent dbclick on form. Thanks to @fazelmk, again.
  * Replace "create" by "new" for validation. Thanks to @fazelmk

== 0.3.5

* enhancement
  * Option to avoid to add bad gem for the rails app.
  * Add concern to models
  * Add concern for the routes

* bugfix
  * Change symbol into string (access session)
  * Table Checkbox (All checkbox bugfix)

== 0.3.4

* bugfix
  * Show number element in table (i18n bug)
  * Improve translation (keep manual translation and check previous translated string)
  * alert-error -> alert-danger (bootstrap 3)
  * Insert field to search-and-filter div before the accordion panel
  * Columns and sort in table fixed (2 commits)

== 0.3.3

* enhancement
  * Icons aligned to center, id aligned to right in table
  * Accordion for option
  * Add vertical-align on icon
  * Add title for search-and-filter box

* bugfix
  * Mass inserting set focus for first input
  * I18n for caption in index table
  * Rails 4 all -> to_a
  * Improve sorting with treeview
  * Responsive for Tablet / Mobile / Desktop
  * Foreignkey in mass-insert and filter-columns error

== 0.3.2

* bugfix
  * Don't try to translate EN to EN (beautiful_locale)
  * rails destroy beautiful_scaffold don't remove app/controllers directory

* enhancement
  * Add error class to control-group (bootstrap + rails validates)