@@ -1,0 +1,9 @@
+require 'rake/testtask'
+
+task default: :test
+
+task :test do |t|
+  ruby "test/scaffold_test.rb"
+end
+
+
